--- a/index.html
+++ b/index.html
@@ -11,31 +11,33 @@
 
 <body>
   <header>
-    <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+    <nav role="navigation">
+      <h1 tabindex="0"><a href="/">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
-  <main id="maincontent">
+  <main id="maincontent" role="main">
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application" aria-label="map"></div>
     </section>
     <section>
-      <div class="filter-options">
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
-          <option value="all">All Neighborhoods</option>
+      <div class="filter-options" role="region" aria-label="filters">
+        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" tabindex="0"
+        aria-label="Select a Neighborhood to filter" role="listbox">
+          <option value="all" role="option">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
-          <option value="all">All Cuisines</option>
+        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" tabindex="0"
+        aria-label="Select a Cuisine to filter" role="listbox">
+          <option value="all" role="option">All Cuisines</option>
         </select>
       </div>
     </section>
-    <section class="restaurant-listing">
+    <section class="restaurant-listing" aria-live="polite">
         <ul id="restaurants-list"></ul>
     </section>
   </main>
 
-  <footer id="footer">
+  <footer id="footer" role="contentinfo">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
 
