--- a/restaurant.html
+++ b/restaurant.html
@@ -15,11 +15,11 @@
   <!-- Beginning header -->
   <header>
     <!-- Beginning nav -->
-    <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+    <nav role="navigation">
+      <h1><a href="/" tabindex="0">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
+    <ul id="breadcrumb" role="navigation">
       <li><a href="/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
@@ -28,16 +28,16 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="restaurant-maincontent">
+  <main id="restaurant-maincontent" role="main">
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application" role="application"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <div class="restaurant-pack">
       <section id="restaurant-container">
-        <h1 id="restaurant-name"></h1>
+        <h1 id="restaurant-name" tabindex="-1"></h1>
         <img id="restaurant-img">
         <p id="restaurant-cuisine"></p>
         <p id="restaurant-address"></p>
