--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </select>
       </div>
     </section>
-    <section class="restaurant-listing" aria-live="polite">
-        <ul id="restaurants-list"></ul>
+    <section class="restaurant-listing">
+        <ul id="restaurants-list" aria-live="assertive"></ul>
     </section>
   </main>
 
