--- a/restaurant.html
+++ b/restaurant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,7 +37,7 @@
     <!-- Beginning restaurant -->
     <div class="restaurant-pack">
       <section id="restaurant-container">
-        <h1 id="restaurant-name" tabindex="-1"></h1>
+        <h2 id="restaurant-name" tabindex="-1"></h2>
         <img id="restaurant-img">
         <p id="restaurant-cuisine"></p>
         <p id="restaurant-address"></p>
