feat: replace echo.js with lazysizes.js as temporal lazy load solution

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script type="application/javascript" charset="utf-8" src="/js/idb.js"></script>
+  <script src="js/lazysizes.min.js" async=""></script>
   <script type="application/javascript" charset="utf-8" src="/js/intersection-observer.js"></script>
-  <!--<script type="application/javascript" charset="utf-8" src="/js/echo.min.js"></script>-->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCoUvaPbhcUz0jXA2-4QvNV20VM3q0J6Gg&libraries=places&callback=initMap"></script>
   <script>
     if ('serviceWorker' in navigator) {
@@ -83,13 +83,6 @@
       }
     }
   </script>
-  <!--<script>
-    echo.init({
-      offset: 1000,
-      throttle: 250,
-      unload: false
-    });
-  </script>-->
 </body>
 
 </html>
