--- a/restaurant.html
+++ b/restaurant.html
@@ -66,19 +66,12 @@
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="/js/idb.js"></script>
-  <!--<script type="application/javascript" charset="utf-8" src="/js/echo.min.js"></script>-->
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
+  <script src="js/lazysizes.min.js" async=""></script>
   <script type="application/javascript" charset="utf-8" src="/js/intersection-observer.js"></script>
   <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCoUvaPbhcUz0jXA2-4QvNV20VM3q0J6Gg&libraries=places&callback=initMap"></script>
-  <!--<script>
-    echo.init({
-      offset: 1000,
-      throttle: 250,
-      unload: false
-    });
-  </script>-->
   <!-- End scripts -->
 
 </body>
