--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#0275d8"/>
   <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="css/index.css" media="none" onload="if(media!='all')media='all'">
+  <link rel="stylesheet" href="dist/css/index.css" media="none" onload="if(media!='all')media='all'">
   <title>Restaurant Reviews</title>
 </head>
 
@@ -43,11 +43,11 @@
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
 
-  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+  <script type="application/javascript" charset="utf-8" src="dist/js/dbhelper.js"></script>
+  <script type="application/javascript" charset="utf-8" src="dist/js/main.js"></script>
   <script type="application/javascript" charset="utf-8" src="/js/idb.js"></script>
   <script src="js/lazysizes.min.js" async=""></script>
-  <script type="application/javascript" charset="utf-8" src="/js/intersection-observer.js"></script>
+  <!--<script type="application/javascript" charset="utf-8" src="dist/js/intersection-observer.js"></script>-->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCoUvaPbhcUz0jXA2-4QvNV20VM3q0J6Gg&libraries=places&callback=initMap"></script>
   <script>
     if ('serviceWorker' in navigator) {
@@ -58,7 +58,7 @@
       });
     }
   </script>
-  <script>
+  <!--<script>
     function lazyLoad(){
       var lazyImages = [].slice.call(document.querySelectorAll("img.lazy"));
 
@@ -82,7 +82,7 @@
         console.log('Error lazyloading imgs');
       }
     }
-  </script>
+  </script>-->
 </body>
 
 </html>
