--- a/restaurant.html
+++ b/restaurant.html
@@ -9,8 +9,8 @@
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
-  <link rel="stylesheet" href="css/index.css" type="text/css" media="none" onload="if(media!='all')media='all'">
-  <link rel="stylesheet" href="css/details.css" type="text/css" media="none" onload="if(media!='all')media='all'">
+  <link rel="stylesheet" href="dist/css/index.css" type="text/css" media="none" onload="if(media!='all')media='all'">
+  <link rel="stylesheet" href="dist/css/details.css" type="text/css" media="none" onload="if(media!='all')media='all'">
   <title>Restaurant Info</title>
 </head>
 
@@ -64,12 +64,12 @@
 
   <!-- Beginning scripts -->
   <!-- Database helpers -->
-  <script type="text/javascript" src="js/dbhelper.js"></script>
+  <script type="text/javascript" src="dist/js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="/js/idb.js"></script>
   <!-- Main javascript file -->
-  <script type="text/javascript" src="js/restaurant_info.js"></script>
+  <script type="text/javascript" src="dist/js/restaurant_info.js"></script>
   <script src="js/lazysizes.min.js" async=""></script>
-  <script type="application/javascript" charset="utf-8" src="/js/intersection-observer.js"></script>
+  <!--<script type="application/javascript" charset="utf-8" src="dist/js/intersection-observer.js"></script>-->
   <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCoUvaPbhcUz0jXA2-4QvNV20VM3q0J6Gg&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
