--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
 
-  <script type="application/javascript" charset="utf-8" src="dist/js/dbhelper.js"></script>
-  <script type="application/javascript" charset="utf-8" src="dist/js/main.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script type="application/javascript" charset="utf-8" src="/js/idb.js"></script>
   <script src="js/lazysizes.min.js" async=""></script>
   <!--<script type="application/javascript" charset="utf-8" src="dist/js/intersection-observer.js"></script>-->
