--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="theme-color" content="#0275d8"/>
   <link rel="manifest" href="/manifest.json">
-  <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+  <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" media="none" onload="if(media!='all')media='all'" />
   <link rel="stylesheet" href="dist/css/index.css" media="none" onload="if(media!='all')media='all'">
   <title>Restaurant Reviews</title>
 </head>
@@ -43,9 +43,9 @@
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
 
-  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-  <script type="application/javascript" charset="utf-8" src="/js/idb.js"></script>
+  <script type="application/javascript" charset="utf-8" src="dist/js/dbhelper.js" async></script>
+  <script type="application/javascript" charset="utf-8" src="js/main.js" async></script>
+  <script type="application/javascript" charset="utf-8" src="/js/idb.js" async></script>
   <script src="js/lazysizes.min.js" async=""></script>
   <!--<script type="application/javascript" charset="utf-8" src="dist/js/intersection-observer.js"></script>-->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCoUvaPbhcUz0jXA2-4QvNV20VM3q0J6Gg&libraries=places&callback=initMap"></script>
